--- a/play.html
+++ b/play.html
@@ -3,6 +3,7 @@
         <title> Cascading Style Sheets </title>
     </head>
     <body>
+        <link rel="stylesheet" href="wilde.css">
         <h1> Produced by - Navya Sri Alaparthi</h1>
         <h4>A Woman of No Importance</h4>
         <h5>This eBook is for the use of anyone anywhere in the United States and
@@ -13,36 +14,39 @@
             will have to check the laws of the country where you are located before
             using this eBook.</h5>
             
-            <p><h6>LORD ILLINGWORTH.</h6>  Thoroughly sensible woman, your mother, Gerald.  I
-knew she would come round in the end.<br></p>
+            <p class="stage">[LORD ILLINGWORTH _and_ GERALD, R.C.  LORD ILLINGWORTH _lolling on a
+sofa_.  GERALD _in a chair_.]</p>
 
-<p><h6>GERALD.</h6>  My mother is awfully conscientious, Lord Illingworth, and I know
+<h6 class="LordIllingworth">LORD ILLINGWORTH.</h6> <p>Thoroughly sensible woman, your mother, Gerald.  I
+knew she would come round in the end.</p>
+
+<h6 class="Gerald">GERALD.</h6> <p> My mother is awfully conscientious, Lord Illingworth, and I know
 she doesn’t think I am educated enough to be your secretary.  She is
 perfectly right, too.  I was fearfully idle when I was at school, and I
-couldn’t pass an examination now to save my life.<br></p>
+couldn’t pass an examination now to save my life.</p>
 
-<p><h6>LORD ILLINGWORTH.</h6>  My dear Gerald, examinations are of no value
+<h6 class="LordIllingworth">LORD ILLINGWORTH.</h6> <p> My dear Gerald, examinations are of no value
 whatsoever.  If a man is a gentleman, he knows quite enough, and if he is
-not a gentleman, whatever he knows is bad for him.<br></p>
+not a gentleman, whatever he knows is bad for him.</p>
 
-<p><h6>GERALD.</h6>  But I am so ignorant of the world, Lord Illingworth.<br></p>
+<h6 class="Gerald">GERALD.</h6><p>  But I am so ignorant of the world, Lord Illingworth.</p>
 
-<p><h6>LORD ILLINGWORTH.</h6>  Don’t be afraid, Gerald.  Remember that you’ve got on
+    <h6 class="LordIllingworth">LORD ILLINGWORTH.</h6> <p> Don’t be afraid, Gerald.  Remember that you’ve got on
 your side the most wonderful thing in the world—youth!  There is nothing
 like youth.  The middle-aged are mortgaged to Life.  The old are in
 life’s lumber-room.  But youth is the Lord of Life.  Youth has a kingdom
 waiting for it.  Every one is born a king, and most people die in exile,
 like most kings.  To win back my youth, Gerald, there is nothing I
 wouldn’t do—except take exercise, get up early, or be a useful member of
-the community.<br></p>
+the community.</p>
 
-<p><h6>GERALD.</h6>  But you don’t call yourself old, Lord Illingworth?<br></p>
+<h6 class="Gerald">>GERALD.</h6><p>  But you don’t call yourself old, Lord Illingworth?</p>
 
-<p><h6>LORD ILLINGWORTH.</h6>  I am old enough to be your father, Gerald.<br></p>
+    <h6 class="LordIllingworth">LORD ILLINGWORTH.</h6> <p> I am old enough to be your father, Gerald.</p>
 
-<p><h6>GERALD.</h6>  I don’t remember my father; he died years ago.<br></p>
+        <h6 class="Gerald">GERALD.</h6>  <p>I don’t remember my father; he died years ago.</p>
 
-<p><h6>LORD ILLINGWORTH.</h6>  So Lady Hunstanton told me.<br></p>
+            <h6 class="LordIllingworth">LORD ILLINGWORTH.</h6><p> So Lady Hunstanton told me.</p>
 
 </body>
 </html>
