--- a/play.html
+++ b/play.html
@@ -29,7 +29,7 @@ couldn’t pass an examination now to save my life.</p>
 whatsoever.  If a man is a gentleman, he knows quite enough, and if he is
 not a gentleman, whatever he knows is bad for him.</p>
 
-<h6 class="Gerald">GERALD.</h6><p>  But I am so ignorant of the world, Lord Illingworth.</p>
+<h6 class="Gerald">GERALD.</h6><p>But I am so ignorant of the world, Lord Illingworth.</p>
 
     <h6 class="LordIllingworth">LORD ILLINGWORTH.</h6> <p> Don’t be afraid, Gerald.  Remember that you’ve got on
 your side the most wonderful thing in the world—youth!  There is nothing
@@ -47,6 +47,26 @@ the community.</p>
         <h6 class="Gerald">GERALD.</h6>  <p>I don’t remember my father; he died years ago.</p>
 
             <h6 class="LordIllingworth">LORD ILLINGWORTH.</h6><p> So Lady Hunstanton told me.</p>
+            <table class="table">
+                <tbody>
+                <tr>
+                    <th> <h4>Character</h4></th>
+                    <th><h4>Actor</h4></th>
+                    <th><h4>Offer</h4></th>
+                </tr>
+                <tr>
+                  <td>Lord Illingworth</td>
+                  <td>Hero</td>
+                  <td>3 million</td>  
+                </tr>
+                <tr>
+                    <td>Gerald</td>
+                    <td>Villan</td>
+                    <td>2 million</td>
+                </tr>
+            </tbody>
+            </table>
+            <a href="play2.html">And the play continues...</a>
 
 </body>
 </html>
