--- a/play2.html
+++ b/play2.html
@@ -43,7 +43,7 @@ world has always laughed at its own tragedies, that being the only way in
 which it has been able to bear them.  And that, consequently, whatever
 the world has treated seriously belongs to the comedy side of things.</p><br>
 
-<h6 class="ladyhustanton">LADY HUNSTANTON.</h6><p class="name"> Now I am quite out of my depth.  I usually am when Lord
+<h6 class="ladyhunstanton">LADY HUNSTANTON.</h6><p class="name"> Now I am quite out of my depth.  I usually am when Lord
 Illingworth says anything.  And the Humane Society is most careless.
 They never rescue me.  I am left to sink.  I have a dim idea, dear Lord
 Illingworth, that you are always on the side of the sinners, and I know I
