--- a/play.html
+++ b/play.html
@@ -66,7 +66,17 @@ the community.</p>
                 </tr>
             </tbody>
             </table>
+            <br>
             <a href="play2.html">And the play continues...</a>
-
+            <br>
+            <div>
+                <img src="gerals.jpg" alt="image of Lord Illingworth">
+                <img src="lord.jpg" alt="image of Gerald">
+            </div>
+            <ul class="navbar-horizontal">
+                <li><a href="play.html"><i class="glyphicon glyphicon-cloud">Replay</i></a></li>
+                <li><a href="play2.html"><i class="glyphicon glyphicon-cloud">Next play</i></a></li>
+            </ul>
+    
 </body>
 </html>
